# balance_app

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  balance_24_25 - in_out.csv  home.py  preprocess.ipynb  pyproject.toml  requirments.txt  run_local.sh  start.sh  test.ipynb
.github/workflows/: test.yml
.streamlit/: secrets.toml  secrets.toml.example
docs/superpowers/plans/: 2026-06-20-app-uplift.md
docs/superpowers/specs/: 2026-06-20-app-uplift-design.md
env_and_cred/: .env  credentials.json
pages/: interaction.py  intro_page.py  plots.py  predict.py
reflex/: balance_app_reflex.py
streamlit/pages/: interaction.py  plots.py
tests/: conftest.py  test_aed_rows.py  test_authentication.py  test_categories.py  test_forecasting.py  test_schema.py
utils/: aed_rows.py  authentication.py  blur_css_helper.py  categories.py  connect.py  forecasting.py  schema.py
